# censosine21

./: .gitignore  README.es-ES.md  README.md  api_info.md  pasos.md  pyproject.toml  requirements.txt  setup.py
censosine21/: __init__.py  censosine21.py
censosine21/entities/: __init__.py  entities.py
csv_samples/: nhorares_regimen_asturias.csv  nhorares_regimen_provincias.csv  samples.py  samples_info.py
entities_resources/: SDC21_idiomas.csv  SDC21_idiomas.xlsx  SDC21_tablas_disponibles.csv  SDC21_tablas_disponibles.xlsx  SDC21_unidades_medida_disponibles.csv  SDC21_unidades_medida_disponibles.xlsx  SDC21_variables_disponibles.csv  SDC21_variables_disponibles.xlsx  __init__.py
examples/: example.py  nhorares_regimen_provincias.csv
examples/csv/: nhorares_regimen_asturias.csv  nhorares_regimen_provincias.csv
test/: test_censosine21.py  test_censosine21_static_methods.py
