[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "censosine2021"
version = "0.0.1"
authors = [
    { name="Patricio Soriano", email="pasoriano@gmail.com" },
]
description = "Python library to interact with the API of the National Institute of Statistics (INE) of Spain that offers the data Dissemination System of the Population and Housing Censuses 2021 (SDC21)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sigdeletras/censosine2021"
"Bug Tracker" = "https://github.com/sigdeletras/censosine2021/issues"